# django-tools

./: README.md  celerybeat-schedule.bak  manage.py  pyproject.toml  task_execute.py  task_output.txt  test_output.txt  thegoodtools.txt
hnmproject/: .env  __init__.py  asgi.py  celery_app.py  settings.py  urls.py  wsgi.py
hnmproject/hnmapp/: __init__.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
hnmproject/hnmapp/migrations/: 0001_initial.py  0002_adminauthtoken_delete_usergroups.py
hnmproject/templates/hnmapp/: user_groups.html
hnmproject/tests/: test_connection.py
redis/: dump.rdb
